# langchain_basics

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent/: simple_agent_google_search.py  simple_agent_wiki.py
agent/agent_sliding_window/: agent_with_sliding_memory.py
app_ui/: restaurant_generator.py
chain/: simple_chain.py
chain/sequence/: base_seq_chain.py  simple_seq_chain.py
create_model/: create_model.py
global_examples/: langchain_basics.py
llm_call/: simple_llm_call.py  test_call.py
memory/: memory_seq_chain.py
memory/file/: file_memory_chain.py
memory/redis/: redis_memory_chain.py
memory/sliding_window/: sliding_window_chain.py
memory/vector_db/: vector_memory_chain.py
prompt_template/: simple_prompt_template.py
utils/: RestaurantOutput.py  langchain_helper.py
