[project]
name = "langchain-basics"
version = "0.1.0"
description = "LangChain learning project"
requires-python = ">=3.11,<3.12"

dependencies = [
    "langchain~=1.2.17",
    "langchain-core~=1.3.2",
    "langchain-community~=0.4.1",
    "langchain-openai~=1.2.1",

    "pydantic~=2.13.3",
    "python-dotenv~=1.2.2",

    "streamlit~=1.57.0",

    "wikipedia~=1.4.0",
    "numexpr~=2.14.1",

    "redis~=7.4.0",
    "chromadb~=1.5.8",

    "requests~=2.33.1"
]
